--- a/DataCleanup/ine_accidentes.rmd
+++ b/DataCleanup/ine_accidentes.rmd
@@ -466,7 +466,7 @@ anos_2013_2014 <- full_join(new13,new14)
 anos_2015_2016 <- full_join(new15,new16)
 anos_2015_2017 <- full_join(anos_2015_2016,new17)
 anos_2010_2014 <- full_join(anos_2010_2012,anos_2013_2014)
-write.csv(anos_2010_2017, "Results/10_17.csv", row.names = F)
+write.csv(anos_2010_2017, "Results/VI10_17.csv", row.names = F)
 
 ```
 
